--- a/towr/package.xml
+++ b/towr/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <package format="2">
   <name>towr</name>
-  <version>6.0.0</version>
+  <version>1.0.0</version>
   <description>
     Trajectory Optimizer for walking robots (TOWR).
   </description>
@@ -14,9 +14,6 @@
   <url type="bugtracker">http://github.com/ethz-adrl/towr/issues</url>
 
   <buildtool_depend>catkin</buildtool_depend>
-  <depend>ifopt</depend>
-  <depend>ifopt_ipopt</depend>
-  <depend>ifopt_snopt</depend>
-  
-  
+  <depend>ifopt_core</depend>
+ 
 </package>
