--- a/towr_ros/package.xml
+++ b/towr_ros/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <package format="2">
   <name>towr_ros</name>
-  <version>6.0.0</version>
+  <version>1.0.0</version>
   <description>
     The ROS dependent parts of TOWR.
   </description>
@@ -27,4 +27,6 @@
   <depend>xpp_msgs</depend>
   
   <depend>towr</depend>
+  <depend>ifopt_ipopt</depend>
+  <depend>ifopt_snopt</depend>
 </package>
