--- a/towr_ros/package.xml
+++ b/towr_ros/package.xml
@@ -4,6 +4,12 @@
   <version>1.0.0</version>
   <description>
     The ROS dependent parts of TOWR.
+    <p>
+    Formulates a variety
+    of robots and terrains and a keyboard user interface to switch between them.
+    It also visualizes the produced motions plan in rviz using
+    <a href="http://wiki.ros.org/xpp">xpp</a>.
+    </p> 
   </description>
 
   <author email="winklera@ethz.ch">Alexander W. Winkler</author>
