--- a/towr_examples/package.xml
+++ b/towr_examples/package.xml
@@ -18,6 +18,7 @@
   <url type="website">https://github.com/ethz-adrl/towr</url>
   <url type="bugtracker">https://github.com/ethz-adrl/towr/issues</url>
 
+  <buildtool_depend>catkin</buildtool_depend>
   <build_depend>ifopt_ipopt</build_depend>
   <build_depend>towr_core</build_depend>
 
