--- a/towr/package.xml
+++ b/towr/package.xml
@@ -4,9 +4,15 @@
   <name>towr</name>
   <version>1.0.0</version>
   <description>
-    Meta-package for the Trajectory Optimizer for Walking Robots (TOWR):
+    Meta-package for the Trajectory Optimizer for Walking Robots (TOWR).
+    TOWR Generates physically feasible motions for legged robots by solving an 
+    optimization problem. A Centroidal model of the dynamics, physical 
+    constraints as well as a desired goal position are given to the solver that
+    then generates the motion plan. TOWR generates 5 step monoped hopping,
+    biped walking, or a complete quadruped trotting cycle, while optimizing 
+    over the gait and step durations, in less than 100ms.
     <p>
-    This core algorithm
+    The core algorithm
     <a href="http://wiki.ros.org/towr_core">towr_core</a>
     is independent of the robot, the NLP solver and ROS. The
     user specifies the kinematics and dynamics of the robot (monoped, biped,
