--- a/towr_ros/package.xml
+++ b/towr_ros/package.xml
@@ -21,7 +21,7 @@
 
   <buildtool_depend>catkin</buildtool_depend>
   
-  <depend>ncurses</depend> 
+  <depend>Curses</depend> 
   
   <depend>message_runtime</depend>
   <depend>message_generation</depend>
