--- a/towr_ros/CMakeLists.txt
+++ b/towr_ros/CMakeLists.txt
@@ -10,9 +10,8 @@ find_package(catkin REQUIRED COMPONENTS
   xpp_msgs
   message_generation
   xpp_states
-  ifopt_ipopt
-  ifopt_snopt
   towr_core
+  ifopt_ipopt  # ipopt_snopt if you want so solve with SNOPT
 )
 
 
