adapt to revised ifopt version

--- a/towr_core/package.xml
+++ b/towr_core/package.xml
@@ -21,6 +21,6 @@
   <url type="bugtracker">http://github.com/ethz-adrl/towr/issues</url>
 
   <buildtool_depend>catkin</buildtool_depend>
-  <depend>ifopt_core</depend>
+  <depend>ifopt</depend>
  
 </package>
