--- a/towr_core/package.xml
+++ b/towr_core/package.xml
@@ -21,6 +21,7 @@
   <url type="bugtracker">http://github.com/ethz-adrl/towr/issues</url>
 
   <buildtool_depend>catkin</buildtool_depend>
+  <buildtool_depend>cmake</buildtool_depend>
   <depend>ifopt</depend>
  
 </package>
