--- a/towr/package.xml
+++ b/towr/package.xml
@@ -1,16 +1,22 @@
 <?xml version="1.0"?>
-
 <package format="2">
   <name>towr</name>
   <version>1.1.0</version>
   <description>
-    Meta-package for the Trajectory Optimizer for Walking Robots (TOWR).
+    Trajectory Optimizer for Walking Robots (TOWR).
     TOWR Generates physically feasible motions for legged robots by solving an 
     optimization problem. A Centroidal model of the dynamics, physical 
     constraints as well as a desired goal position are given to the solver that
     then generates the motion plan. TOWR generates 5 step monoped hopping,
     biped walking, or a complete quadruped trotting cycle, while optimizing 
     over the gait and step durations, in less than 100ms.
+    <p>
+    This algorithm is independent of the robot, the NLP solver and ROS. The
+    user specifies the kinematics and dynamics of the robot (monoped, biped,
+    quadruped,...) a desired goal state, as well as which 
+    <a href="http://wiki.ros.org/ifopt">Ifopt</a> 
+    solver to use and this algorithm generates the corresponding motion-plan.
+    </p>
   </description>
 
   <author email="winklera@ethz.ch">Alexander W. Winkler</author>
@@ -19,13 +25,9 @@
   
   <url type="website">http://github.com/ethz-adrl/towr</url>
   <url type="bugtracker">http://github.com/ethz-adrl/towr/issues</url>
-  
-  <buildtool_depend>catkin</buildtool_depend>
-  <exec_depend>towr_core</exec_depend>
-  <exec_depend>towr_examples</exec_depend>
-  <exec_depend>towr_ros</exec_depend>
 
-  <export>
-    <metapackage />
-  </export>
+  <buildtool_depend>catkin</buildtool_depend>
+  <buildtool_depend>cmake</buildtool_depend>
+  <depend>ifopt</depend>
+ 
 </package>
