--- a/towr/package.xml
+++ b/towr/package.xml
@@ -1,22 +1,17 @@
 <?xml version="1.0"?>
 <package format="2">
   <name>towr</name>
-  <version>1.1.0</version>
+  <version>1.2.0</version>
   <description>
     Trajectory Optimizer for Walking Robots (TOWR).
-    TOWR Generates physically feasible motions for legged robots by solving an 
-    optimization problem. A Centroidal model of the dynamics, physical 
+    TOWR Generates physically feasible motion-plans 
+    for legged robots by solving an optimization problem defined through
+    <a href="https://github.com/ethz-adrl/ifopt">Ifopt</a>. 
+    A Single Rigid Body Model (SRBD) of they dynamics, physical 
     constraints as well as a desired goal position are given to the solver that
     then generates the motion plan. TOWR generates 5 step monoped hopping,
     biped walking, or a complete quadruped trotting cycle, while optimizing 
     over the gait and step durations, in less than 100ms.
-    <p>
-    This algorithm is independent of the robot, the NLP solver and ROS. The
-    user specifies the kinematics and dynamics of the robot (monoped, biped,
-    quadruped,...) a desired goal state, as well as which 
-    <a href="http://wiki.ros.org/ifopt">Ifopt</a> 
-    solver to use and this algorithm generates the corresponding motion-plan.
-    </p>
   </description>
 
   <author email="winklera@ethz.ch">Alexander W. Winkler</author>
@@ -26,7 +21,7 @@
   <url type="website">http://github.com/ethz-adrl/towr</url>
   <url type="bugtracker">http://github.com/ethz-adrl/towr/issues</url>
 
-  <buildtool_depend>catkin</buildtool_depend>
+  <buildtool_depend>catkin</buildtool_depend> <!-- optional -->
   <buildtool_depend>cmake</buildtool_depend>
   <depend>ifopt</depend>
   <depend>eigen</depend>
